--- a/l10n_es_pos_simplified_invoice/views/l10n_es_pos_simplified_invoice_report_receipt_report.xml
+++ b/l10n_es_pos_simplified_invoice/views/l10n_es_pos_simplified_invoice_report_receipt_report.xml
@@ -10,8 +10,12 @@
                         <img src="/web/binary/company_logo" /><br />
                         <t t-esc="o.user_id.company_id.name"/><br />
                         NIF: <t t-esc="o.user_id.company_id.vat"/><br />
-                        <div t-field="o.partner_id"
-                            t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
+                        <t t-if="o.partner_id">
+                        Customer data<br />
+                        Name: <t t-esc="o.partner_id.name"/><br />
+                        VAT: <t t-esc="o.partner_id.vat"/><br />
+                        Address: <t t-esc="o.partner_id.street"/><br />
+                        </t>
                         Seller: <span t-field="o.user_id"/><br/>
                         Date: <span t-field="o.date_order"/><br/>
                     </div>
