[UPDATE] Resize Invoice and include Tax in total price

--- a/l10n_es_pos_simplified_invoice/static/src/css/pos.css
+++ b/l10n_es_pos_simplified_invoice/static/src/css/pos.css
@@ -1,1 +1,2 @@
-img.desaturate { -webkit-filter: grayscale(100%); filter: grayscale(100%); }
+img.desaturate { -webkit-filter: grayscale(100%); filter: grayscale(100%);width:100%;}
+.pos-sale-ticket_extra{width:290px;}
