--- a/l10n_es_pos_simplified_invoice/views/point_of_sale_view.xml
+++ b/l10n_es_pos_simplified_invoice/views/point_of_sale_view.xml
@@ -2,16 +2,26 @@
 <openerp>
 <data>
 
-        <record id="view_pos_order_l10n_es_pos_filter" model="ir.ui.view">
-            <field name="name">pos.order.list.select</field>
-            <field name="model">pos.order</field>
-            <field name="inherit_id" ref="point_of_sale.view_pos_order_filter"/>
-            <field name="arch" type="xml">
-                <search string="Search Sales Order">
-                    <filter icon="terp-check" string="Simplified Invoice" domain="[('invoice_id','=', False)]"/>
-                </search>
+        <record model="ir.actions.act_window" id="action_l10n_es_pos_pos_form">
+            <field name="name">Orders</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">pos.order</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+            <field name="view_id" eval="False"/>
+           <field name="domain">[('invoice_id','=',False)]</field>
+            <field name="help" type="html">
+              <p class="oe_view_nocontent_create">
+                Click to create a new order.
+              </p><p>
+                Use this menu to browse previous orders. To record new
+                orders, you may use the menu <i>Your Session</i> for
+                the touchscreen interface.
+              </p>
             </field>
         </record>
+
+        <menuitem name="Simplified invoice" parent="point_of_sale.menu_point_of_sale" id="menu_point_ofsale_l10n_es_pos" action="action_l10n_es_pos_pos_form" sequence="2" groups="point_of_sale.group_pos_manager,point_of_sale.group_pos_user" />/>
 
 </data>
 </openerp>
