--- a/l10n_es_pos_simplified_invoice/views/point_of_sale_view.xml
+++ b/l10n_es_pos_simplified_invoice/views/point_of_sale_view.xml
@@ -3,7 +3,7 @@
 <data>
 
         <record model="ir.actions.act_window" id="action_l10n_es_pos_pos_form">
-            <field name="name">Orders</field>
+            <field name="name">Simplified invoice</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">pos.order</field>
             <field name="view_type">form</field>
