--- a/l10n_es_pos_simplified_invoice/views/pos_template.xml
+++ b/l10n_es_pos_simplified_invoice/views/pos_template.xml
@@ -4,6 +4,8 @@
                   name="pos_l10n_es_assets_backend"
                   inherit_id="point_of_sale.assets_backend">
             <xpath expr="." position="inside">
+                <script src="/l10n_es_pos_simplified_invoice/static/src/js/widgets.js"
+                        type="text/javascript"></script>
                 <script src="/l10n_es_pos_simplified_invoice/static/src/js/screens.js"
                         type="text/javascript"></script>
                 <script src="/l10n_es_pos_simplified_invoice/static/src/js/models.js"
