[UPDATE] desature not found

--- a/l10n_es_pos_simplified_invoice/static/src/css/pos.css
+++ b/l10n_es_pos_simplified_invoice/static/src/css/pos.css
@@ -1,2 +1,2 @@
-img.desaturate { -webkit-filter: grayscale(100%); filter: grayscale(100%);width:100%;}
+img.desaturate {width:50%;height: 100%;margin: 0 24%;}
 .pos-sale-ticket_extra{width:280px;}
